# arm7tdmi_aeabi

./: Cargo.toml  README.md  search-index.js  settings.html
arm7tdmi_aeabi/: all.html  index.html  macro.generate_fns!.html  macro.generate_fns.html  sidebar-items.js
benches/: division_benches.rs
src/: division_fns.rs  lib.rs  lib.rs.bak  the_code.s
src/arm7tdmi_aeabi/: fn_declarations.rs.html  lib.rs.html
tests/: assembly_code_tests.rs  division_tests.rs  proc_macro_output_test.rs
