[package]
name = "arm7tdmi_aeabi"
description = "proc-macro to put aeabi functions into your code"
repository = "https://github.com/Lokathor/arm7tdmi_aeabi"
version = "0.2.0"
edition = "2021"
keywords = ["arm7tdmi", "armv4t", "thumbv4t"]
categories = ["embedded", "no-std"]
# main license is CC0, the other two are provided for maximum comaptibility with other Rust code.
license = "CC0-1.0 OR Apache-2.0 OR MIT"

[dependencies]
# none!

[dev-dependencies]
getrandom = "0.2"
bytemuck = "1"
criterion = "0.3"

[lib]
#proc-macro = true

[[bench]]
name = "division_benches"
harness = false
